force-app/main/default/objects/Outreach_Tracking__c/Outreach_Tracking__c.object-meta.xml
<CustomObject>
    <description>Tracking fields for outreach</description>
    <label>Outreach Tracking</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outreach Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>