force-app/main/default/objects/Outreach_Tracking__c/fields/Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email__c</fullName>
    <formula>Service_File__r.HOMEtracker__Applicant__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Email</label>
    <type>Text</type>
</CustomField>