force-app/main/default/objects/Outreach_Tracking__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <formula>Service_File__r.HOMEtracker__Applicant__r.FirstName &amp;&quot; &quot;&amp; Service_File__r.HOMEtracker__Applicant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>