force-app/main/default/objects/Outreach_Tracking__c/fields/Applicant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Phone__c</fullName>
    <formula>Service_File__r.HOMEtracker__Applicant__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Phone</label>
    <type>Text</type>
</CustomField>