force-app/main/default/objects/Outreach_Tracking__c/fields/Applicant_Stage__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Stage__c</fullName>
    <formula>IF( ISNULL(Service_File__r.Cert_or_Inelig_Date__c) = false,  TEXT(Service_File__r.HOMEtracker__Status__c) ,
CASE(TEXT(Tracker_Status__c),
&apos;&apos;,&apos;NEEDS STATUS&apos;,
&apos;Flagged&apos;,&apos;FLAGGED&apos;,
&apos;Hidden&apos;,&apos;Waiting To Be Backup&apos;,
&apos;Backup&apos;,IF( TEXT(Landlord_Developer_Determination__c) =&apos;&apos;,&apos;Backup&apos;,&apos;BACKUP w DETERMINATION&apos;),
&apos;Primary&apos;,
IF(TEXT(Landlord_Developer_Determination__c) = &apos;&apos;,&apos;Needs Property Approval&apos;,
IF( ISBLANK(Date_Eligibility_Review_Began__c ),&apos;Needs CGPH Eligibility&apos;,
TEXT(Service_File__r.Application_Workflow_Status__c )
)),&apos;?&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated stage in the process of the tracking workflow.</inlineHelpText>
    <label>Applicant Stage</label>
    <type>Text</type>
</CustomField>