force-app/main/default/objects/Outreach_Tracking__c/fields/CGPH_Approval_Denial_Date__c.field-meta.xml
<CustomField>
    <fullName>CGPH_Approval_Denial_Date__c</fullName>
    <formula>Service_File__r.Cert_or_Inelig_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From Service File</inlineHelpText>
    <label>CGPH Approval / Denial Date</label>
    <type>Date</type>
</CustomField>