force-app/main/default/objects/Outreach_Tracking__c/fields/CGPH_Determination__c.field-meta.xml
<CustomField>
    <fullName>CGPH_Determination__c</fullName>
    <formula>Service_File__r.Certified_or_Ineligible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From Service File</inlineHelpText>
    <label>CGPH Determination</label>
    <type>Text</type>
</CustomField>