force-app/main/default/objects/Outreach_Tracking__c/fields/Date_CGPH_Added_Name__c.field-meta.xml
<CustomField>
    <fullName>Date_CGPH_Added_Name__c</fullName>
    <inlineHelpText>Date CGP&amp;H added this applicant to the tracker.</inlineHelpText>
    <label>Date CGPH Added Name</label>
    <type>Date</type>
</CustomField>