force-app/main/default/objects/Outreach_Tracking__c/fields/Date_Eligibility_Review_Began__c.field-meta.xml
<CustomField>
    <fullName>Date_Eligibility_Review_Began__c</fullName>
    <formula>Service_File__r.Income_Certification_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From Service File</inlineHelpText>
    <label>Date Eligibility Review Began</label>
    <type>Date</type>
</CustomField>