force-app/main/default/objects/Outreach_Tracking__c/fields/Date_Marked_Primary__c.field-meta.xml
<CustomField>
    <fullName>Date_Marked_Primary__c</fullName>
    <inlineHelpText>The date this applicant was marked as a primary applicant.</inlineHelpText>
    <label>Date Marked Primary</label>
    <type>Date</type>
</CustomField>