force-app/main/default/objects/Outreach_Tracking__c/fields/Date_Ready_for_Eligibility_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Ready_for_Eligibility_Review__c</fullName>
    <formula>Service_File__r.Ready_for_Full_Income_Cert_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Ready for Eligibility Review</label>
    <type>Date</type>
</CustomField>