force-app/main/default/objects/Outreach_Tracking__c/fields/Household_Size__c.field-meta.xml
<CustomField>
    <fullName>Household_Size__c</fullName>
    <formula>Service_File__r.HOMEtracker__Household_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From Service File</inlineHelpText>
    <label>Household Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>