force-app/main/default/objects/Outreach_Tracking__c/fields/Landlord_Developer_App_Sent__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Developer_App_Sent__c</fullName>
    <inlineHelpText>Text provided by landlord / developer / seller if a their application was sent, and when. Yes or No can be answer, or a date.</inlineHelpText>
    <label>Landlord / Developer App Sent</label>
    <length>200</length>
    <type>Text</type>
</CustomField>