force-app/main/default/objects/Outreach_Tracking__c/fields/Landlord_Developer_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Developer_Deadline__c</fullName>
    <inlineHelpText>Deadline landlord / developer has given applicant to complete their application process.</inlineHelpText>
    <label>Landlord / Developer Deadline</label>
    <type>Date</type>
</CustomField>