force-app/main/default/objects/Outreach_Tracking__c/fields/Landlord_Developer_Determination__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Developer_Determination__c</fullName>
    <inlineHelpText>Approval or Denial provided by landlord / developer</inlineHelpText>
    <label>Landlord / Developer Determination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>