force-app/main/default/objects/Outreach_Tracking__c/fields/Landlord_Developer_Determination_Date__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Developer_Determination_Date__c</fullName>
    <inlineHelpText>Date landlord / developer determined the applicant was acceptable or not.</inlineHelpText>
    <label>Landlord / Developer Determination Date</label>
    <type>Date</type>
</CustomField>