force-app/main/default/objects/Outreach_Tracking__c/fields/Landlord_Developer_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Developer_Last_Update__c</fullName>
    <inlineHelpText>Auto-filled by submitted Landlord / Developer form</inlineHelpText>
    <label>Landlord / Developer Last Update</label>
    <type>DateTime</type>
</CustomField>