force-app/main/default/objects/Outreach_Tracking__c/fields/Landlord_Developer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Developer_Notes__c</fullName>
    <inlineHelpText>Notes provided by landlord / developer regarding applicant.</inlineHelpText>
    <label>Landlord / Developer Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>