force-app/main/default/objects/Outreach_Tracking__c/fields/Landlord_Developer_Tour__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Developer_Tour__c</fullName>
    <inlineHelpText>Text provided by landlord / developer if a tour occurred, and when. Yes or No can be answer, or a date.</inlineHelpText>
    <label>Landlord / Developer Tour</label>
    <length>200</length>
    <type>Text</type>
</CustomField>