force-app/main/default/objects/Outreach_Tracking__c/fields/Marked_as_Removed_Date__c.field-meta.xml
<CustomField>
    <fullName>Marked_as_Removed_Date__c</fullName>
    <inlineHelpText>Date applicant was marked as removed</inlineHelpText>
    <label>Marked as Removed Date</label>
    <type>Date</type>
</CustomField>