force-app/main/default/objects/Outreach_Tracking__c/fields/Move_to_Removed_Report__c.field-meta.xml
<CustomField>
    <fullName>Move_to_Removed_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to move a removed applicant from the applicant tracker to the removed applicants page.</inlineHelpText>
    <label>Move to Removed Report</label>
    <type>Checkbox</type>
</CustomField>