force-app/main/default/objects/Outreach_Tracking__c/fields/Outreach_Tracker_Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Tracker_Property_Name__c</fullName>
    <formula>IF( ISBLANK(Service_File__r.HOMEtracker__Property__r.Group_Property_Parent__c ),Service_File__r.HOMEtracker__Property__r.Name,Service_File__r.HOMEtracker__Property__r.Group_Property_Parent__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outreach Tracker Property Name</label>
    <type>Text</type>
</CustomField>