force-app/main/default/objects/Outreach_Tracking__c/fields/Pre_Applicant_ID__c.field-meta.xml
<CustomField>
    <fullName>Pre_Applicant_ID__c</fullName>
    <formula>Service_File__r.Pre_Applicant__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Applicant ID</label>
    <type>Text</type>
</CustomField>