force-app/main/default/objects/Outreach_Tracking__c/fields/Priority_Calc__c.field-meta.xml
<CustomField>
    <fullName>Priority_Calc__c</fullName>
    <formula>IF( Service_File__r.Priority__c =0,1000, Service_File__r.Priority__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>