force-app/main/default/objects/Outreach_Tracking__c/fields/Property_Id__c.field-meta.xml
<CustomField>
    <fullName>Property_Id__c</fullName>
    <formula>IF( ISBLANK(Service_File__r.HOMEtracker__Property__r.Group_Property_Parent__c ),Service_File__r.HOMEtracker__Property__r.Id,Service_File__r.HOMEtracker__Property__r.Group_Property_Parent__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If part of group property, show group property ID, if not then show property ID</inlineHelpText>
    <label>Property Id Group</label>
    <type>Text</type>
</CustomField>