force-app/main/default/objects/Outreach_Tracking__c/fields/Property_ID_w_o_Group__c.field-meta.xml
<CustomField>
    <fullName>Property_ID_w_o_Group__c</fullName>
    <formula>Service_File__r.HOMEtracker__Property__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property ID w/o Group</label>
    <type>Text</type>
</CustomField>