force-app/main/default/objects/Outreach_Tracking__c/fields/Property_Link__c.field-meta.xml
<CustomField>
    <fullName>Property_Link__c</fullName>
    <formula>HYPERLINK(
&quot;https://cgph.lightning.force.com/lightning/r/HOMEtracker__Property__c/&quot;&amp;Service_File__r.HOMEtracker__Property__r.Id&amp;&quot;/view&quot;,
Service_File__r.HOMEtracker__Property__r.Name,
&quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Link</label>
    <type>Text</type>
</CustomField>