force-app/main/default/objects/Outreach_Tracking__c/fields/Property_Rent_or_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Property_Rent_or_List_Price__c</fullName>
    <formula>MAX(Service_File__r.HOMEtracker__Property__r.HOMEtracker__Monthly_Rent__c,
Service_File__r.HOMEtracker__Property__r.HOMEtracker__List_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Rent or List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>