force-app/main/default/objects/Outreach_Tracking__c/fields/Property_Unit__c.field-meta.xml
<CustomField>
    <fullName>Property_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the property here, of if part of a group listing enter the appropriate property unit once applicable.</inlineHelpText>
    <label>Property / Unit</label>
    <referenceTo>HOMEtracker__Property__c</referenceTo>
    <relationshipLabel>Outreach Tracking</relationshipLabel>
    <relationshipName>Outreach_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>