force-app/main/default/objects/Outreach_Tracking__c/fields/Service_File__c.field-meta.xml
<CustomField>
    <fullName>Service_File__c</fullName>
    <label>Service File</label>
    <referenceTo>HOMEtracker__Service_File__c</referenceTo>
    <relationshipLabel>Outreach Tracking</relationshipLabel>
    <relationshipName>Outreach_Tracking</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>