force-app/main/default/objects/Outreach_Tracking__c/fields/Service_File_Check__c.field-meta.xml
<CustomField>
    <fullName>Service_File_Check__c</fullName>
    <formula>IF( Service_File__r.Outreach_Tracking__r.Id = Id , &quot;OK&quot;,&quot;PROBLEM&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service File Check</label>
    <type>Text</type>
</CustomField>