force-app/main/default/objects/Outreach_Tracking__c/fields/SF_Priority__c.field-meta.xml
<CustomField>
    <fullName>SF_Priority__c</fullName>
    <formula>Service_File__r.Priority__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>