force-app/main/default/objects/Outreach_Tracking__c/fields/Termination_Notification__c.field-meta.xml
<CustomField>
    <fullName>Termination_Notification__c</fullName>
    <inlineHelpText>Select &quot;Yes&quot; once landlord or developer has been notified of the applicant&apos;s termination. Select &quot;N/A&quot; if not applicable.</inlineHelpText>
    <label>Termination Notification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>