force-app/main/default/objects/Outreach_Tracking__c/fields/Tracker_Status__c.field-meta.xml
<CustomField>
    <fullName>Tracker_Status__c</fullName>
    <inlineHelpText>The status selected will determine if the applicants will show up on the tracker, and what color they will be highlighted.</inlineHelpText>
    <label>Tracker Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Backup</fullName>
            </value>
            <value>
                <fullName>Flagged</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
                <default>true</default>
                <label>Hidden</label>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>