force-app/main/default/objects/Outreach_Tracking__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <inlineHelpText>If applicable, enter a unit number that this applicant is in consideration for</inlineHelpText>
    <label>Unit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>