force-app/main/default/objects/Outreach_Tracking__c/fields/Update_Property_Unit__c.field-meta.xml
<CustomField>
    <fullName>Update_Property_Unit__c</fullName>
    <formula>HYPERLINK(
&quot;https://cgph--c.vf.force.com/flow/OT_Find_Available_Properties_By_Development?varDevID=&quot;&amp; 
 Service_File__r.HOMEtracker__Property__r.Development_address__r.Id&amp;
&quot;&amp;varID=&quot;&amp;
 Id &amp;
&quot;&amp;retURL=&quot;&amp;Id,
&quot;CLICK HERE&quot;,
&quot;_blank&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update Property / Unit</label>
    <type>Text</type>
</CustomField>