force-app/main/default/objects/Outreach_Tracking__c/listViews/Edit_by_Property.listView-meta.xml
<ListView>
    <fullName>Edit_by_Property</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Property_Id__c</field>
        <operation>equals</operation>
    </filters>
    <label>Edit by Property</label>
</ListView>